--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
             <div class="apresentacao__links">
+                <h2>Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://www.instagram.com/aluraonline/">Instagram</a>
                 <a class="apresentacao__links__link" href="https://github.com/alura-cursos">Github</a>
             </div>
