--- a/index.html
+++ b/index.html
@@ -20,11 +20,21 @@
             </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://www.instagram.com/aluraonline/">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/alura-cursos">Github</a>
+                <a class="apresentacao__links__link" href="https://github.com/alura-cursos">
+                    <img src="./assets/github.png">
+                    Github
+                </a>
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/school/aluracursos/">
+                    <img src="./assets/linkedin.png">
+                    Linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://www.twitch.tv/alura">
+                    <img src="./assets/twitch.png">
+                    Twitch
+                </a>
             </div>
         </section>
-        <img src="imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer></footer>
 </body>
