Desafio: crie uma página currículo!

--- a/about.html
+++ b/about.html
@@ -12,10 +12,11 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="./index.html">Home</a>
             <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="./curriculo.html">Currículo</a>
         </nav>
     </header>
     <main>
-        
+
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alura.</p>
